@@ -64,7 +64,7 @@ public class PCPointSingleFieldByte extends AbstractPCPointSingleField {
      */
     public PCPointSingleFieldByte(int x, int y) {
         this.x = x;
-        this.y = new Integer(y);
+        this.y = Integer.valueOf(y);
     }
 
     public void setX(int x) {
