@@ -66,7 +66,7 @@ public class PCPointSingleFieldDate extends AbstractPCPointSingleField {
      */
     public PCPointSingleFieldDate(int x, int y) {
         this.x = x;
-        this.y = new Integer(y);
+        this.y = Integer.valueOf(y);
     }
 
     public void setX(int x) {
